--- a/package.json
+++ b/package.json
@@ -1,51 +1,37 @@
 {
-    "name": "viper.js",
-    "description": "Official Node SDK for the Vipercord Bot List API",
-    "version": "1.0.0",
-
-    "main": "dist/index.js",
-    "types": "dist/index.d.ts",
-
-    "files": [
-        "dist/**/*"
-    ],
-
-    "scripts": {
-        "build": "tsc",
-        "start": "ts-node src/index.ts"
-    },
-
-    "license": "MIT",
-    "dependencies": {
-        "@ayanaware/logger": "^2.2.1",
-        "node-fetch": "2.6.1"
-    },
-
-    "devDependencies": {
-        "@types/node": "^15.3.0",
-        "@types/node-fetch": "^2.5.10",
-        "ts-node": "^9.1.1",
-        "typescript": "^4.2.4"
-    },
-
-    "repository": {
-        "url": "https://github.com/ViperCord/viper.js"
-    },
-
-    "author": {
-        "name": "Atlas-Bots",
-        "url": "https://github.com/ViperCord/viper.js"
-    },
-
-    "contributors": [
-        {
-            "name": "TheRealToxicDev",
-            "url": "https://github.com/TheRealToxicDev"
-        },
-        {
-            "name": "RizonFTW",
-            "url": "https://github.com/RizonFTW"
-        }
-    ]
-
+  "name": "@vipercord/viper.js",
+  "description": "Official Node SDK for the Vipercord Bot List API",
+  "version": "1.0.0",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "files": [
+    "dist/**/*"
+  ],
+  "scripts": {
+    "build": "tsc",
+    "start": "ts-node src/index.ts"
+  },
+  "license": "MIT",
+  "dependencies": {
+    "@ayanaware/logger": "^2.2.1",
+    "node-fetch": "2.6.1"
+  },
+  "devDependencies": {
+    "@types/node": "^15.3.0",
+    "@types/node-fetch": "^2.5.10",
+    "ts-node": "^9.1.1",
+    "typescript": "^4.2.4"
+  },
+  "repository": {
+    "url": "git+https://github.com/ViperCord/viper.js.git"
+  },
+  "author": "vipercord (https://github.com/ViperCord/viper.js)",
+  "contributors": [
+    "TheRealToxicDev (https://github.com/TheRealToxicDev)",
+    "RizonFTW (https://github.com/RizonFTW)"
+  ],
+  "bugs": {
+    "url": "https://github.com/ViperCord/viper.js/issues"
+  },
+  "homepage": "https://github.com/ViperCord/viper.js#readme"
 }
